--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
+  author: Charles Gardner
   description: 
-  company: your company (optional)
+  company: Opsroll
   
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -164,7 +164,8 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of
     # alphanumeric characters. Maximum 20 tags per role.
 
-dependencies: []
+dependencies:
+  - opsroll.ansible
   # List your role dependencies here, one per line.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
