--- a/meta/main.yml
+++ b/meta/main.yml
@@ -165,7 +165,7 @@ galaxy_info:
     # alphanumeric characters. Maximum 20 tags per role.
 
 dependencies:
-  - opsroll.ansible
+  - { role: opsroll.ansible }
   # List your role dependencies here, one per line.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
