--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,13 @@ install:
   # Create ansible.cfg with correct roles_path
   - printf '[defaults]\nroles_path=../' >ansible.cfg
 
+  - ansible-galaxy install opsroll.ansible
+
 script:
   # Basic role syntax check
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
   - ansible-playbook tests/test.yml -i tests/inventory
+  - ls ../
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
