--- a/.travis.yml
+++ b/.travis.yml
@@ -18,16 +18,22 @@ install:
   # Check ansible version
   - ansible --version
 
+  - mkdir -p $HOME/.ansible/roles/galaxy
+
   # Create ansible.cfg with correct roles_path
-  - printf '[defaults]\nroles_path=../' >ansible.cfg
+  - printf '[defaults]\nroles_path=$HOME/.ansible/roles/galaxy' > $HOME/.ansible.cfg
 
   - ansible-galaxy install opsroll.ansible
+  
+    # use opsroll.ansible to setup our ansible conifguration.
+  - ansible-playbook tests/setup.yml
 
 script:
   # Basic role syntax check
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+  
+    # test run
   - ansible-playbook tests/test.yml -i tests/inventory
-  - ls ../
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
